# code-review-project-datacamp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: smartphone_utils.py
tests/: test_smartphones.py
