[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-project-datacamp"
version = "0.1.0"
description = "Refactoring and testing smartphone data cleaning workflows."
requires-python = ">=3.8"
authors = [
    {name = "Ivan Espinosa", email = "ivangesg@gmail.com"}
]
dependencies = [
    "pandas>=1.5.1",
    "seaborn>=0.13.0",
    "matplotlib>=3.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"